# wayfarer

./: .gitignore  README.md  meson.build  meson_options.txt
data/: meson.build  org.stronnag.wayfarer.gschema.xml  wayfarer.blp  wayfarer.desktop  wayfarer.gresource.xml  wayfarer.ui
gs41/unsafe-mode@daria.co.uk/: extension.js  metadata.json
meson/: baseinfo.py  meson.build  post_install.sh
src/: encoders.vala  getinfo.sh  gst-record-audio.vala  gst-recording.vala  meson.build  pipeline.vala  portal  portal.vala  recman.vala  selection.vala  settings.vala  utils.vala  way-resources.c  wayfarer-config.h.in  wayfarer-convert-to-schema.vala  wayfarer.vala  xdg-notify.vala
src/vapi/: wayfarer.vapi
subprojects/: blueprint-compiler.wrap
valaopts/: meson.build
